dataset1235/2025-2/2868285114/users/2008605748/executions/3649835072_2132966528.log
== RUN (2025-08-22 19:21:33)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo:
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo:
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo:
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo:
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo:
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:24:35)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
Digite seu nome completo: Selina Kyle
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 19:25:08)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
Digite seu nome completo: Selina Kyle
SELINA KYLE
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 19:31:29)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:24:37)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
Digite seu nome completo: Selina Kyle
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:27:28)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:31:28)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 19:31:33)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 01:10:19)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:25:07)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
Digite seu nome completo: Selina Kyle
SELINA KYLE
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 3
    Digite seu nome completo: Selina Kyle
           ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 01:10:19)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:27:31)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:31:32)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 19:22:42)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 20:17:03)
-- CODE: 
nome_completo = input("Digite seu nome completo: ")
print(nome_completo.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite seu nome completo: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite seu nome completo: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite seu nome completo: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite seu nome completo: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite seu nome completo: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite seu nome completo: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
